--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lékařský Protokol Jiříka</title>
-    
+    <link rel="manifest" href="manifest.json">
+
+<meta name="theme-color" content="#0b0f1a">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -99,4 +101,5 @@
     <script src="script.js"></script>
 <script src="jirkova-mes-zprava-o-lecich.js"></script> 
 </body>
+
 </html>
