--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lékařský Protokol Jiříka</title>
     <link rel="manifest" href="manifest.json">
-
+     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <meta name="theme-color" content="#0b0f1a">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -103,3 +105,4 @@
 </body>
 
 </html>
+
