--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button data-status="Používám">Používám</button>
             <button data-status="Ukončeno">Ukončeno</button>
             <button id="fullscreen-toggle" title="Celá obrazovka (F)">⛶</button>
+            <button id="jirik-manual-opener-btn"  >🧾</button> 
         </div>
 
         <button id="add-medicine-btn">➕ Přidat lék</button>
@@ -102,7 +103,10 @@
     
     <script src="script.js"></script>
 <script src="jirkova-mes-zprava-o-lecich.js"></script> 
+    <!-- Debug wrapper -->
+   <script src="jirkuv-hlidac.js" defer></script>  
 </body>
 
 </html>
+
 
